// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component renders last item as span in multiple routes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            First
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Second
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            Third
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Home
          </title>
          <path
            d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          First
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Second
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          Third
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge component renders long routes with optional icons 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            First
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Second
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              MoreHoriz
            </title>
            <path
              d="M207.858-432Q188-432 174-446.142q-14-14.141-14-34Q160-500 174.142-514q14.141-14 34-14Q228-528 242-513.858q14 14.141 14 34Q256-460 241.858-446q-14.141 14-34 14Zm272 0Q460-432 446-446.142q-14-14.141-14-34Q432-500 446.142-514q14.141-14 34-14Q500-528 514-513.858q14 14.141 14 34Q528-460 513.858-446q-14.141 14-34 14Zm272 0Q732-432 718-446.142q-14-14.141-14-34Q704-500 718.142-514q14.141-14 34-14Q772-528 786-513.858q14 14.141 14 34Q800-460 785.858-446q-14.141 14-34 14Z"
            />
          </svg>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Sixth
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            Last
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          First
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Second
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            MoreHoriz
          </title>
          <path
            d="M207.858-432Q188-432 174-446.142q-14-14.141-14-34Q160-500 174.142-514q14.141-14 34-14Q228-528 242-513.858q14 14.141 14 34Q256-460 241.858-446q-14.141 14-34 14Zm272 0Q460-432 446-446.142q-14-14.141-14-34Q432-500 446.142-514q14.141-14 34-14Q500-528 514-513.858q14 14.141 14 34Q528-460 513.858-446q-14.141 14-34 14Zm272 0Q732-432 718-446.142q-14-14.141-14-34Q704-500 718.142-514q14.141-14 34-14Q772-528 786-513.858q14 14.141 14 34Q800-460 785.858-446q-14.141 14-34 14Z"
          />
        </svg>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Sixth
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          Last
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge component renders with more than 1 route 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            First
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Home
          </title>
          <path
            d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
          />
        </svg>
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          First
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge component renders with more than 2 routes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            First
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            Second
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Home
          </title>
          <path
            d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          First
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          Second
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge component renders with more than 4 routes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            First
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Second
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              MoreHoriz
            </title>
            <path
              d="M207.858-432Q188-432 174-446.142q-14-14.141-14-34Q160-500 174.142-514q14.141-14 34-14Q228-528 242-513.858q14 14.141 14 34Q256-460 241.858-446q-14.141 14-34 14Zm272 0Q460-432 446-446.142q-14-14.141-14-34Q432-500 446.142-514q14.141-14 34-14Q500-528 514-513.858q14 14.141 14 34Q528-460 513.858-446q-14.141 14-34 14Zm272 0Q732-432 718-446.142q-14-14.141-14-34Q704-500 718.142-514q14.141-14 34-14Q772-528 786-513.858q14 14.141 14 34Q800-460 785.858-446q-14.141 14-34 14Z"
            />
          </svg>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Sixth
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            Last
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Home
          </title>
          <path
            d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          First
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Second
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            MoreHoriz
          </title>
          <path
            d="M207.858-432Q188-432 174-446.142q-14-14.141-14-34Q160-500 174.142-514q14.141-14 34-14Q228-528 242-513.858q14 14.141 14 34Q256-460 241.858-446q-14.141 14-34 14Zm272 0Q460-432 446-446.142q-14-14.141-14-34Q432-500 446.142-514q14.141-14 34-14Q500-528 514-513.858q14 14.141 14 34Q528-460 513.858-446q-14.141 14-34 14Zm272 0Q732-432 718-446.142q-14-14.141-14-34Q704-500 718.142-514q14.141-14 34-14Q772-528 786-513.858q14 14.141 14 34Q800-460 785.858-446q-14.141 14-34 14Z"
          />
        </svg>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Sixth
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          Last
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge component renders with more than 4 routes 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            First
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Second
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            Third
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            Fourth
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Home
          </title>
          <path
            d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          First
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Second
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          Third
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          Fourth
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge component renders without base icon when showBaseIcon is false 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
      >
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <a
            class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
            data-testid=""
            href="https://seller.flipkart.com"
            id=""
          >
            First
            <span
              class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
            />
          </a>
        </div>
        <div
          class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
        >
          <svg
            class="fk-icon breadcrumb-icon"
            color=""
            height="20px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="20px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ChevronRight
            </title>
            <path
              d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
            />
          </svg>
          <span
            style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
          >
            Second
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__BreadcrumbContainer-sc-mpspjq-0 gPEnAi"
    >
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <a
          class="styles__StyledAnchor-sc-h14uw5-1 hFdXrh"
          data-testid=""
          href="https://seller.flipkart.com"
          id=""
        >
          First
          <span
            class="styles__IconWrapper-sc-h14uw5-2 fjuBNh"
          />
        </a>
      </div>
      <div
        class="styles__BreadcrumbElement-sc-mpspjq-1 knMtAI"
      >
        <svg
          class="fk-icon breadcrumb-icon"
          color=""
          height="20px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ChevronRight
          </title>
          <path
            d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
          />
        </svg>
        <span
          style="font-size: 11px; font-weight: 400; line-height: 16px; letter-spacing: -.15px; color: rgb(102, 102, 102);"
        >
          Second
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
